GSSO-196 GSSO-276 Adjust OpenID provider metadata
