# oauth2/handler.go
@@ -292,7 +292,7 @@ type oidcConfiguration struct {
 	// OpenID Connect Userinfo URL
 	//
 	// URL of the OP's UserInfo Endpoint.
-	UserinfoEndpoint string `json:"userinfo_endpoint"`
+	UserinfoEndpoint string `json:"userinfo_endpoint,omitempty"`
 
 	// OAuth 2.0 Supported Scope Values
 	//
@@ -309,7 +309,7 @@ type oidcConfiguration struct {
 	// OpenID Connect Supported Userinfo Signing Algorithm
 	//
 	// 	JSON array containing a list of the JWS [JWS] signing algorithms (alg values) [JWA] supported by the UserInfo Endpoint to encode the Claims in a JWT [JWT].
-	UserinfoSigningAlgValuesSupported []string `json:"userinfo_signing_alg_values_supported"`
+	UserinfoSigningAlgValuesSupported []string `json:"userinfo_signing_alg_values_supported,omitempty"`
 
 	// OpenID Connect Supported ID Token Signing Algorithms
 	//
@@ -322,21 +322,17 @@ type oidcConfiguration struct {
 	// OpenID Connect Default ID Token Signing Algorithms
 	//
 	// Algorithm used to sign OpenID Connect ID Tokens.
-	//
-	// required: true
-	IDTokenSignedResponseAlg []string `json:"id_token_signed_response_alg"`
+	IDTokenSignedResponseAlg []string `json:"id_token_signed_response_alg,omitempty"`
 
 	// OpenID Connect User Userinfo Signing Algorithm
 	//
 	// Algorithm used to sign OpenID Connect Userinfo Responses.
-	//
-	// required: true
-	UserinfoSignedResponseAlg []string `json:"userinfo_signed_response_alg"`
+	UserinfoSignedResponseAlg []string `json:"userinfo_signed_response_alg,omitempty"`
 
 	// OpenID Connect Request Parameter Supported
 	//
 	// Boolean value specifying whether the OP supports use of the request parameter, with true indicating support.
-	RequestParameterSupported bool `json:"request_parameter_supported"`
+	RequestParameterSupported bool `json:"request_parameter_supported,omitempty"`
 
 	// OpenID Connect Request URI Parameter Supported
 	//
@@ -347,7 +343,7 @@ type oidcConfiguration struct {
 	//
 	// Boolean value specifying whether the OP requires any request_uri values used to be pre-registered
 	// using the request_uris registration parameter.
-	RequireRequestURIRegistration bool `json:"require_request_uri_registration"`
+	RequireRequestURIRegistration bool `json:"require_request_uri_registration,omitempty"`
 
 	// OpenID Connect Claims Parameter Parameter Supported
 	//
@@ -357,7 +353,7 @@ type oidcConfiguration struct {
 	// OAuth 2.0 Token Revocation URL
 	//
 	// URL of the authorization server's OAuth 2.0 revocation endpoint.
-	RevocationEndpoint string `json:"revocation_endpoint"`
+	RevocationEndpoint string `json:"revocation_endpoint,omitempty,omitempty"`
 
 	// OpenID Connect Back-Channel Logout Supported
 	//
@@ -373,14 +369,14 @@ type oidcConfiguration struct {
 	// OpenID Connect Front-Channel Logout Supported
 	//
 	// Boolean value specifying whether the OP supports HTTP-based logout, with true indicating support.
-	FrontChannelLogoutSupported bool `json:"frontchannel_logout_supported"`
+	FrontChannelLogoutSupported bool `json:"frontchannel_logout_supported,omitempty"`
 
 	// OpenID Connect Front-Channel Logout Session Required
 	//
 	// Boolean value specifying whether the OP can pass iss (issuer) and sid (session ID) query parameters to identify
 	// the RP session with the OP when the frontchannel_logout_uri is used. If supported, the sid Claim is also
 	// included in ID Tokens issued by the OP.
-	FrontChannelLogoutSessionSupported bool `json:"frontchannel_logout_session_supported"`
+	FrontChannelLogoutSessionSupported bool `json:"frontchannel_logout_session_supported,omitempty"`
 
 	// OpenID Connect End-Session Endpoint
 	//
@@ -393,13 +389,37 @@ type oidcConfiguration struct {
 	// which are described in Section 6.1 of OpenID Connect Core 1.0 [OpenID.Core]. These algorithms are used both when
 	// the Request Object is passed by value (using the request parameter) and when it is passed by reference
 	// (using the request_uri parameter).
-	RequestObjectSigningAlgValuesSupported []string `json:"request_object_signing_alg_values_supported"`
+	RequestObjectSigningAlgValuesSupported []string `json:"request_object_signing_alg_values_supported,omitempty"`
 
 	// OAuth 2.0 PKCE Supported Code Challenge Methods
 	//
 	// JSON array containing a list of Proof Key for Code Exchange (PKCE) [RFC7636] code challenge methods supported
 	// by this authorization server.
-	CodeChallengeMethodsSupported []string `json:"code_challenge_methods_supported"`
+	CodeChallengeMethodsSupported []string `json:"code_challenge_methods_supported,omitempty"`
+
+	// OpenID Connect Supported UI Locales
+	//
+	// JSON array containing a list of the UI locales that this OP supports.
+	UiLocalesSupported []string `json:"ui_locales_supported"`
+
+	// OpenID Connect Supported Authentication Context Class Reference values
+	//
+	// JSON array containing a list of the Authentication Context Class References that this OP supports.
+	AcrValuesSupported []string `json:"acr_values_supported"`
+
+	// OpenID Connect Supported Claim Types
+	//
+	// JSON array containing a list of the Claim Types that the OpenID Provider supports. These Claim Types are
+	// described in Section 5.6 of OpenID Connect Core 1.0 [OpenID.Core]. Values defined by this specification are
+	// normal, aggregated, and distributed. If omitted, the implementation supports only normal Claims.
+	ClaimTypesSupported []string `json:"claim_types_supported"`
+
+	// OpenID Provider documentation URL
+	//
+	// URL of a page containing human-readable information that developers might want or need to know when using the
+	// OpenID Provider. In particular, if the OpenID Provider does not support Dynamic Client Registration, then
+	// information on how to register Clients needs to be provided in this documentation.
+	ServiceDocumentation string `json:"service_documentation"`
 }
 
 // swagger:route GET /.well-known/openid-configuration oidc discoverOidcConfiguration
@@ -426,34 +446,28 @@ func (h *Handler) discoverOidcConfiguration(w http.ResponseWriter, r *http.Reque
 		return
 	}
 	h.r.Writer().Write(w, r, &oidcConfiguration{
-		Issuer:                                 h.c.IssuerURL(r.Context()).String(),
-		AuthURL:                                h.c.OAuth2AuthURL(r.Context()).String(),
-		TokenURL:                               h.c.OAuth2TokenURL(r.Context()).String(),
-		JWKsURI:                                h.c.JWKSURL(r.Context()).String(),
-		RevocationEndpoint:                     urlx.AppendPaths(h.c.IssuerURL(r.Context()), RevocationPath).String(),
-		RegistrationEndpoint:                   h.c.OAuth2ClientRegistrationURL(r.Context()).String(),
-		SubjectTypes:                           h.c.SubjectTypesSupported(r.Context()),
-		ResponseTypes:                          []string{"code", "code id_token", "id_token", "token id_token", "token", "token id_token code"},
-		ClaimsSupported:                        h.c.OIDCDiscoverySupportedClaims(r.Context()),
-		ScopesSupported:                        h.c.OIDCDiscoverySupportedScope(r.Context()),
-		UserinfoEndpoint:                       h.c.OIDCDiscoveryUserinfoEndpoint(r.Context()).String(),
-		TokenEndpointAuthMethodsSupported:      []string{"client_secret_post", "client_secret_basic", "private_key_jwt", "none"},
-		IDTokenSigningAlgValuesSupported:       []string{key.Algorithm},
-		IDTokenSignedResponseAlg:               []string{key.Algorithm},
-		UserinfoSignedResponseAlg:              []string{key.Algorithm},
-		GrantTypesSupported:                    []string{"authorization_code", "implicit", "client_credentials", "refresh_token"},
-		ResponseModesSupported:                 []string{"query", "fragment"},
-		UserinfoSigningAlgValuesSupported:      []string{"none", key.Algorithm},
-		RequestParameterSupported:              true,
-		RequestURIParameterSupported:           true,
-		RequireRequestURIRegistration:          true,
-		BackChannelLogoutSupported:             true,
-		BackChannelLogoutSessionSupported:      true,
-		FrontChannelLogoutSupported:            true,
-		FrontChannelLogoutSessionSupported:     true,
-		EndSessionEndpoint:                     urlx.AppendPaths(h.c.IssuerURL(r.Context()), LogoutPath).String(),
-		RequestObjectSigningAlgValuesSupported: []string{"none", "RS256", "ES256"},
-		CodeChallengeMethodsSupported:          []string{"plain", "S256"},
+		Issuer:                            h.c.IssuerURL(r.Context()).String(),
+		AuthURL:                           h.c.OAuth2AuthURL(r.Context()).String(),
+		TokenURL:                          h.c.OAuth2TokenURL(r.Context()).String(),
+		JWKsURI:                           h.c.JWKSURL(r.Context()).String(),
+		RegistrationEndpoint:              h.c.OAuth2ClientRegistrationURL(r.Context()).String(),
+		SubjectTypes:                      h.c.SubjectTypesSupported(r.Context()),
+		ResponseTypes:                     []string{"code"},
+		ClaimsSupported:                   h.c.OIDCDiscoverySupportedClaims(r.Context()),
+		ScopesSupported:                   h.c.OIDCDiscoverySupportedScope(r.Context()),
+		TokenEndpointAuthMethodsSupported: []string{"client_secret_basic"},
+		IDTokenSigningAlgValuesSupported:  []string{key.Algorithm},
+		GrantTypesSupported:               []string{"authorization_code"},
+		ResponseModesSupported:            []string{"query"},
+		RequestURIParameterSupported:      false,
+		ClaimsParameterSupported:          false,
+		BackChannelLogoutSupported:        true,
+		BackChannelLogoutSessionSupported: true,
+		UiLocalesSupported:                []string{"et", "en", "ru"},
+		AcrValuesSupported:                []string{"low", "substantial", "high"},
+		ClaimTypesSupported:               []string{"normal"},
+		EndSessionEndpoint:                urlx.AppendPaths(h.c.IssuerURL(r.Context()), LogoutPath).String(),
+		ServiceDocumentation:              "https://e-gov.github.io/GOVSSO/",
 	})
 }
 
